edited hw title

--- a/eda_hw_1.ipynb
+++ b/eda_hw_1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EDA Homework 1\n",
+    "# MSDS 593 Homework 1\n",
     "**By:** Jiahui Jin, Flora Chen\n",
     "\n",
     "**Date:** Aug 31, 2020"
